# rust_gtk3_example

./: Cargo.toml  kb  rg.bb  rust_gtk3_example_0.1.0.bb
meta-custom-layer/: README
meta-custom-layer-rust/conf/: layer.conf
meta-custom-layer-rust/recipes-rust_app/rust_app/: rgtk3_0.1.0.bb
meta-custom-layer/conf/: layer.conf
meta-custom-layer/recipes-core/images/: core-image-weston_cpy.bb  custom-image.bb
meta-custom-layer/recipes-my_app/my_app/: myapprecipe_0.1.bb
meta-custom-layer/recipes-rust_app/rust_app/: rgtk3_0.1.0.bb  rustgtk3_0.1.0.bb  rusthello_0.1.0.bb
src/: main.rs
