[package]
name = "rust_gtk3_example"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/smallB007/rust_gtk3_example.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gtk = "0.15.3"
gobject-sys = "0.15.10"
[net]
retry = 6                 # network retries
git-fetch-with-cli = true # use the `git` executable for git operations
